--- a/src/components/index/header/header.css
+++ b/src/components/index/header/header.css
@@ -3,7 +3,7 @@ header {
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(../../img/hero.jpg);
+    background-image: url(../../../img/hero.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
